Prevent page content from bleeding through desktop nav submenu

--- a/apollo/assets/styles/sass/60-components/_navigation.scss
+++ b/apollo/assets/styles/sass/60-components/_navigation.scss
@@ -331,6 +331,7 @@ Wide navigation styles
 	&[aria-hidden="false"] {
 
 		display: block;
+		z-index: 5;
 
 	}
 
